# signature-poc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
backend/: Cargo.toml
backend/src/: main.rs  state.rs  witness.rs
docs/: README.md  architecture.md  jmt-integration.md  kalqix-zk-production-integration.md  optimizations.md  production-migration.md  profiling-guide.md  wire-format.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  PlaceOrderComponent.jsx  RegisterKeyComponent.jsx  WalletConnect.jsx  db.js  main.jsx  septic.js  utils.js
frontend/wasm-signer/: Cargo.toml
frontend/wasm-signer/src/: lib.rs
program/: Cargo.toml
program/elf/: riscv64im-succinct-zkvm-elf  signature-poc
program/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  poseidon2_hasher.rs  septic.rs
