[workspace]
members = ["backend", "program", "shared"]
resolver = "2"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-6.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", package = "k256", tag = "patch-k256-13.4-sp1-6.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "main" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", branch = "main" }
sp1-primitives = { git = "https://github.com/succinctlabs/sp1", branch = "main" }
sp1-lib = { git = "https://github.com/succinctlabs/sp1", branch = "main" }