[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "query", "macros"] }
tokio = { version = "1", features = ["full"] }
sp1-sdk = { version = "6.0.2", features = ["profiling"] }
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
bincode = "1"
anyhow = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sp1-primitives = "6.0.2"
p3-field = "0.3.2-succinct"
p3-symmetric = "0.3.2-succinct"
p256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
