[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.2", features = ["verify"] }
sp1-lib = "6.0.2"
shared = { path = "../shared" }
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
bincode = "1"
serde = { version = "1", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
