[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.2", features = ["verify"] }
sp1-lib = "6.0.2"
shared = { path = "../shared" }
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
bincode = "1"
borsh = { version = "1.3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
jmt = { git = "https://github.com/kalqix/jmt", rev = "8112b48ad7d66789145e3dfd133924a632678100", default-features = false, features = ["std", "sha2"] }
