[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bincode = "1"
hex = "0.4"
borsh = { version = "1.3", features = ["derive"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
jmt = { git = "https://github.com/kalqix/jmt", rev = "435ff9f9ab4f4ba29ef6b9c13172a4087d612eac", default-features = false, features = ["std", "sha2"] }

# Guest-only: Poseidon2 precompile via sp1-zkvm syscalls.
[target.'cfg(target_os = "zkvm")'.dependencies]
sp1-zkvm = "6.0.2"

# Host-only: software Poseidon2 (must produce byte-identical output to the
# guest precompile — verified by the alignment test).
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
sp1-primitives = "6.0.2"
p3-field = "0.3.2-succinct"
p3-symmetric = "0.3.2-succinct"
