[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bincode = "1"
hex = "0.4"
borsh = { version = "1.3", features = ["derive"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
jmt = { git = "https://github.com/kalqix/jmt", rev = "4bd0faa76480419b0eda86e13b0d61e27d495f40", default-features = false, features = ["std", "sha2"] }

# Guest-only: Poseidon2 precompile via sp1-zkvm syscalls.
[target.'cfg(target_os = "zkvm")'.dependencies]
sp1-zkvm = "6.0.2"

# Host-only: software Poseidon2 (must produce byte-identical output to the
# guest precompile — verified by the alignment test) and OS randomness for
# Schnorr nonce/key generation.
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
sp1-primitives = "6.0.2"
p3-field = "0.3.2-succinct"
p3-symmetric = "0.3.2-succinct"
rand = "0.8"

[dev-dependencies]
num-bigint = "0.4"
num-traits = "0.2"
