[workspace]

[package]
name = "wasm-signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
shared = { path = "../../shared" }

[profile.release]
opt-level = "z"
lto = true
